[package]
name = "coinit"
version = "0.1.0"
edition = "2021"
description = "CoInitializeEx wrapper"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
license = "Zlib"
repository = "https://github.com/LNSEAB/coinit"

[dependencies.windows]
version = "0.33.0"
features = [
    "Win32_System_Com",
]
